class Rating {
  constructor(rating, imdbID, userId) {
    this.rating = rating
    this.imdbID = imdbID
    this.userId = userId
  }
}

module.exports = Rating
