class Review {
  constructor(text, imdbID, userId) {
    this.text = text
    this.imdbID = imdbID
    this.userId = userId
  }
}

module.exports = Review
