@startuml MyOMDb
class User {
    id: int
    firstname: string
    surname: string
    email: string
    password: string
    registration_date: date
    register(email, password): void
    login(email, password): boolean
    resetPassword(new_password): void
    putMovieOnWatch(movieSource, imdbID): void
    removeMovieFromWatch(movieSource, imdbID): void
    putMovieOnWatched(movieSource, imdbID): void
    removeMovieFromWatched(movieSource, imdbID): void
    Rating(rating, imdbID, userId): void
    Review(review, imdbID, userId): void
}

class Watchlist {
    id: int
    imdbID: string
    titel: string
    year: date
    poster: string
    type: string
}

class Watchedlist {
    id: int
    imdbID: string
    titel: string
    year: date
    poster: string
    type: string
}

class Review {
    userID: int
    imdbID: string
    review: text
}

class Rating {
    userID: int
    imdbID: string
    rating: int
}
User --> Watchlist
User --> Watchedlist
User --> Review
User --> Rating
@enduml
